--- a/.devops/aca-code-review-pipelines.yml
+++ b/.devops/aca-code-review-pipelines.yml
@@ -93,7 +93,7 @@ stages:
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
               TF_ENVIRONMENT_FOLDER: "weu-dev"
-              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
+              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
       - job: tfplan_app
@@ -109,9 +109,13 @@ stages:
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
               TF_ENVIRONMENT_FOLDER: "weu-dev"
-              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
+              AKS_NAME: ${{ variables.AKS_DEV_NAME }}
+              AKS_API_SERVER_URL: ${{ variables.DEV_AKS_APISERVER_URL }}
+              AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.DEV_AKS_AZURE_DEVOPS_SA_CACRT }}
+              AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.DEV_AKS_AZURE_DEVOPS_SA_TOKEN }}
 
   - stage: UAT
     dependsOn: []
@@ -132,7 +136,7 @@ stages:
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
               TF_ENVIRONMENT_FOLDER: "weu-uat"
-              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
+              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
       - job: tfplan_app
@@ -148,9 +152,13 @@ stages:
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
               TF_ENVIRONMENT_FOLDER: "weu-uat"
-              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
+              AKS_NAME: ${{ variables.AKS_UAT_NAME }}
+              AKS_API_SERVER_URL: ${{ variables.UAT_AKS_APISERVER_URL }}
+              AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.UAT_AKS_AZURE_DEVOPS_SA_CACRT }}
+              AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.UAT_AKS_AZURE_DEVOPS_SA_TOKEN }}
 
   - stage: PROD
     dependsOn: []
@@ -171,7 +179,7 @@ stages:
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
               TF_ENVIRONMENT_FOLDER: "weu-prod"
-              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
+              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
               TF_SUMMARIZE: true
       - job: tfplan_app
@@ -187,6 +195,10 @@ stages:
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
               TF_ENVIRONMENT_FOLDER: "weu-prod"
-              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
               TF_SUMMARIZE: true
+              AKS_NAME: ${{ variables.AKS_PROD_NAME }}
+              AKS_API_SERVER_URL: ${{ variables.PROD_AKS_APISERVER_URL }}
+              AKS_AZURE_DEVOPS_SA_CA_CRT: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_CACRT }}
+              AKS_AZURE_DEVOPS_SA_TOKEN: ${{ variables.PROD_AKS_AZURE_DEVOPS_SA_TOKEN }}
