mock: removed uat env

--- a/.devops/mock-deploy-pipelines.yml
+++ b/.devops/mock-deploy-pipelines.yml
@@ -10,13 +10,13 @@ parameters:
     values:
       - False
       - True
-  - name: 'UAT'
-    displayName: 'Run on UAT environment'
-    type: boolean
-    default: True
-    values:
-      - False
-      - True
+  # - name: 'UAT'
+  #   displayName: 'Run on UAT environment'
+  #   type: boolean
+  #   default: True
+  #   values:
+  #     - False
+  #     - True
   # - name: 'PROD'
   #   displayName: 'Run on PROD environment'
   #   type: boolean
