--- a/.devops/qi-code-review-pipelines.yml
+++ b/.devops/qi-code-review-pipelines.yml
@@ -5,9 +5,9 @@ pr:
       - main
   paths:
     include:
-      - 'src/domains/qui-app'
-      - 'src/domains/qui-common'
-      - 'src/domains/qui-secret'
+      - 'src/domains/qi-app'
+      - 'src/domains/qi-common'
+      - 'src/domains/qi-secret'
     exclude:
       - '**/*.lock.hcl'
       - '**/*.md'
@@ -38,9 +38,9 @@ parameters:
 variables:
   TIME_OUT: 15
   # working dir
-  WORKING_DIR_APP: 'src/domains/qui-app'
-  WORKING_DIR_COMMON: 'src/domains/qui-common'
-  WORKING_DIR_SECRET: 'src/domains/qui-secret'
+  WORKING_DIR_APP: 'src/domains/qi-app'
+  WORKING_DIR_COMMON: 'src/domains/qi-common'
+  WORKING_DIR_SECRET: 'src/domains/qi-secret'
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
   poolNameProd: '$(TF_POOL_NAME_PROD)'
