--- a/.devops/qi-deploy-pipelines.yml
+++ b/.devops/qi-deploy-pipelines.yml
@@ -28,10 +28,10 @@ parameters:
 variables:
   TIME_OUT: 10
   # working dir
-  WORKING_DIR_APP: 'src/domains/qui-app'
-  WORKING_DIR_COMMON: 'src/domains/qui-common'
-  WORKING_DIR_SECRET: 'src/domains/qui-secret'
-  DOMAIN_NAME: qui
+  WORKING_DIR_APP: 'src/domains/qi-app'
+  WORKING_DIR_COMMON: 'src/domains/qi-common'
+  WORKING_DIR_SECRET: 'src/domains/qi-secret'
+  DOMAIN_NAME: qi
   poolNameDev: '$(TF_POOL_NAME_DEV)'
   poolNameUat: '$(TF_POOL_NAME_UAT)'
   poolNameProd: '$(TF_POOL_NAME_PROD)'
