--- a/.devops/checkout-code-review-pipelines.yml
+++ b/.devops/checkout-code-review-pipelines.yml
@@ -5,8 +5,8 @@ pr:
       - main
   paths:
     include:
-      - 'src/domains/checkout-app'
       - 'src/domains/checkout-common'
+      - 'src/domains/checkout-app'
     exclude:
       - '**/*.lock.hcl'
       - '**/*.md'
@@ -35,7 +35,7 @@ parameters:
       - True
 
 variables:
-  TIME_OUT: 15
+  TIME_OUT: 30
   # working dir
   WORKING_DIR_APP: 'src/domains/checkout-app'
   WORKING_DIR_COMMON: 'src/domains/checkout-common'
@@ -55,8 +55,8 @@ resources:
     - repository: terraform
       type: github
       name: pagopa/azure-pipeline-templates
-      ref: refs/tags/v6.0.0
-      endpoint: "io-azure-devops-github-ro"
+      ref: refs/tags/v5.2.1
+      endpoint: 'io-azure-devops-github-ro'
 
 stages:
   - stage: DEV
@@ -65,7 +65,8 @@ stages:
     pool:
       name: "${{variables.poolNameDev}}"
     jobs:
-      - job: tfplan_common
+      #APP
+      - job: tfplan_checkout
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
@@ -74,14 +75,15 @@ stages:
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
           - template: templates/terraform-summarize/template.yaml@terraform
-          # 2. Run terraform plan core
+          # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-dev"
-              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+              TF_ENVIRONMENT_FOLDER: "dev"
+              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
-      - job: tfplan_app
+      #COMMON
+      - job: tfplan_checkout
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
@@ -90,11 +92,11 @@ stages:
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
           - template: templates/terraform-summarize/template.yaml@terraform
-          # 2. Run terraform plan core
+          # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-dev"
-              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
+              TF_ENVIRONMENT_FOLDER: "dev"
+              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
 
@@ -104,7 +106,8 @@ stages:
     pool:
       name: "${{variables.poolNameUat}}"
     jobs:
-      - job: tfplan_common
+      #APP
+      - job: tfplan_checkout
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
@@ -113,14 +116,15 @@ stages:
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
           - template: templates/terraform-summarize/template.yaml@terraform
-          # 2. Run terraform plan core
+          # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-uat"
-              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+              TF_ENVIRONMENT_FOLDER: "uat"
+              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
-      - job: tfplan_app
+      #COMMON
+      - job: tfplan_checkout
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
@@ -129,11 +133,11 @@ stages:
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
           - template: templates/terraform-summarize/template.yaml@terraform
-          # 2. Run terraform plan core
+          # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-uat"
-              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
+              TF_ENVIRONMENT_FOLDER: "uat"
+              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
 
@@ -143,7 +147,8 @@ stages:
     pool:
       name: "${{variables.poolNameProd}}"
     jobs:
-      - job: tfplan_common
+      #APP
+      - job: tfplan_checkout
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
@@ -152,14 +157,15 @@ stages:
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
           - template: templates/terraform-summarize/template.yaml@terraform
-          # 2. Run terraform plan core
+          # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-prod"
-              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
+              TF_ENVIRONMENT_FOLDER: "prod"
+              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
               TF_SUMMARIZE: true
-      - job: tfplan_app
+      #COMMON
+      - job: tfplan_checkout
         strategy:
           parallel: 1
         timeoutInMinutes: $[variables.TIME_OUT]
@@ -168,10 +174,10 @@ stages:
           # 1. Install terraform
           - template: templates/terraform-setup/template.yaml@terraform
           - template: templates/terraform-summarize/template.yaml@terraform
-          # 2. Run terraform plan core
+          # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "weu-prod"
-              WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
+              TF_ENVIRONMENT_FOLDER: "prod"
+              WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
               TF_SUMMARIZE: true
