checkout fix pipeline

--- a/.devops/checkout-code-review-pipelines.yml
+++ b/.devops/checkout-code-review-pipelines.yml
@@ -78,7 +78,7 @@ stages:
           # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "dev"
+              TF_ENVIRONMENT_FOLDER: "weu-dev"
               WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
@@ -95,7 +95,7 @@ stages:
           # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "dev"
+              TF_ENVIRONMENT_FOLDER: "weu-dev"
               WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameDev}}"
               TF_SUMMARIZE: true
@@ -119,7 +119,7 @@ stages:
           # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "uat"
+              TF_ENVIRONMENT_FOLDER: "weu-uat"
               WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
@@ -136,7 +136,7 @@ stages:
           # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "uat"
+              TF_ENVIRONMENT_FOLDER: "weu-uat"
               WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameUat}}"
               TF_SUMMARIZE: true
@@ -160,7 +160,7 @@ stages:
           # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "prod"
+              TF_ENVIRONMENT_FOLDER: "weu-prod"
               WORKINGDIR: ${{ variables.WORKING_DIR_APP }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
               TF_SUMMARIZE: true
@@ -177,7 +177,7 @@ stages:
           # 2. Run terraform plan checkout
           - template: templates/terraform-plan/template.yaml@terraform
             parameters:
-              TF_ENVIRONMENT_FOLDER: "prod"
+              TF_ENVIRONMENT_FOLDER: "weu-prod"
               WORKINGDIR: ${{ variables.WORKING_DIR_COMMON }}
               AZURE_SERVICE_CONNECTION_NAME: "${{variables.azureServiceConnectionPlanNameProd}}"
               TF_SUMMARIZE: true
